--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,66 @@
 html,
 body {
-	height: 100%;
-	margin: 0;
+    height: 100%;
+    margin: 0;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
-	background-color: #f0f8ff;
-	font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: column;
+    background-color: #f0f8ff;
+    font-family: "Playfair Display", serif;
 }
 
 header {
-	background-color: #4a90e2;
-	color: white;
-	text-align: center;
-	padding: 1rem;
+    background-color: #4a90e2;
+    color: white;
+    text-align: center;
+    padding: 1rem;
 }
 
 footer {
-	background-color: #2c3e50;
-	color: white;
-	text-align: center;
-	padding: 1rem;
-	position: relative;
-	bottom: 0;
-	width: 100%;
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 main {
-	flex: 1;
+    flex: 1;
 }
 
 .container {
-	margin-top: 2rem;
+    margin-top: 2rem;
 }
 
 .alert-info {
-	background-color: #e9ecef;
-	border-color: #d3d9df;
+    background-color: #e9ecef;
+    border-color: #d3d9df;
 }
 
 .card {
-	border-radius: 15px;
-	border: none;
-	background-color: #ffffff;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .btn-primary {
-	background-color: #4a90e2;
-	border: none;
-	transition: background-color 0.3s ease;
+    background-color: #4a90e2;
+    border: none;
+    transition: background-color 0.3s ease;
 }
 
 .btn-primary:hover {
-	background-color: #357ab8;
+    background-color: #357ab8;
 }
 
 .display-4 {
-	font-size: 2.5rem;
-	font-weight: 300;
+    font-size: 2.5rem;
+    font-weight: 300;
 }
 
 .text-success {
@@ -69,17 +69,17 @@ main {
 
 h1,
 h2 {
-	color: #ffffff;
+    color: #ffffff;
 }
 
 form label {
-	color: #4a90e2;
+    color: #4a90e2;
 }
 
 .generated-name-title {
-	color: #4a90e2;
+    color: #4a90e2;
 }
 
 .hidden {
-	display: none;
+    display: none;
 }
